--- a/kosh/src/kosh_frontend/index.html
+++ b/kosh/src/kosh_frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>IC Hello Starter</title>
+  <title>KOSH Wallet</title>
   <base href="/" />
   <link rel="icon" href="/favicon.ico" />
 </head>
@@ -15,7 +15,7 @@
     Firefox are recommended.
   </div>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
