--- a/stellar-wallet-frontend/index.html
+++ b/stellar-wallet-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/kosh_logo_white.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kosh Stellar Wallet</title>
   </head>
