--- a/kosh/src/kosh_frontend/index.html
+++ b/kosh/src/kosh_frontend/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'none'; object-src 'none'; frame-ancestors 'none'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' http://localhost:* https://icp0.io https://*.icp0.io https://icp-api.io https://horizon-testnet.stellar.org https://horizon.stellar.org https://*.stellar.org; worker-src 'self' blob:">
   <title>KOSH Wallet</title>
   <base href="/" />
   <link rel="icon" href="/favicon.ico" />
