--- a/kosh/src/kosh_frontend/index.html
+++ b/kosh/src/kosh_frontend/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'none'; object-src 'none'; frame-ancestors 'none'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self' data:; connect-src 'self' http://localhost:* https://icp0.io https://*.icp0.io https://icp-api.io https://horizon-testnet.stellar.org https://horizon.stellar.org https://*.stellar.org; worker-src 'self' blob:">
-  <title>KOSH Wallet</title>
-  <base href="/" />
-  <link rel="icon" href="/favicon.ico" />
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/kosh_logo_white.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kosh Stellar Wallet</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
